--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,32 +67,34 @@ jobs:
 
       - name: Prepare tags.
         id: tags
+        env:
+          BUILD_TYPE: ${{ matrix.build_type }}
+          PHP_VERSION: "8.4"
         run: |
           BASE_NAME="${{ env.REGISTRY }}/${{ github.repository_owner }}/apache"
-          BUILD_TYPE="${{ matrix.build_type }}"
-          PHP_VERSION="8.4"
           echo "BASE_NAME=${BASE_NAME}" >> "$GITHUB_OUTPUT"
-          echo "PHP_VERSION=${PHP_VERSION}" >> "$GITHUB_OUTPUT"
+          echo "PHP_VERSION=${{ env.PHP_VERSION }}" >> "$GITHUB_OUTPUT"
 
           if [[ "${{ github.event_name }}" == "pull_request" ]]; then
             # For PRs: use PR number
-            TAG="${BASE_NAME}:${PHP_VERSION}-debian-${BUILD_TYPE}-pr-${{ github.event.number }}"
-            echo "TAG=${TAG}" >> "$GITHUB_OUTPUT"
+            TAG="${BASE_NAME}:${{ env.PHP_VERSION }}-debian-${{ env.BUILD_TYPE }}-pr-${{ github.event.number }}"
           elif [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
             # For main: stable tags + short SHA
             SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
-            TAG="${BASE_NAME}:${PHP_VERSION}-debian-${BUILD_TYPE}"
-            TAG="${TAG},${BASE_NAME}:${PHP_VERSION}-debian-${BUILD_TYPE}-sha-${SHORT_SHA}"
-            echo "TAG=${TAG}" >> "$GITHUB_OUTPUT"
+            TAG="${BASE_NAME}:${{ env.PHP_VERSION }}-debian-${{ env.BUILD_TYPE }}"
+            TAG="${TAG},${BASE_NAME}:${{ env.PHP_VERSION }}-debian-${{ env.BUILD_TYPE }}-sha-${SHORT_SHA}"
           else
             # Other branches: use branch name
             BRANCH_NAME="${GITHUB_REF#refs/heads/}"
-            TAG="${BASE_NAME}:${PHP_VERSION}-debian-${BUILD_TYPE}-${BRANCH_NAME}"
-            echo "TAG=${TAG}" >> "$GITHUB_OUTPUT"
+            TAG="${BASE_NAME}:${{ env.PHP_VERSION }}-debian-${{ env.BUILD_TYPE }}-${BRANCH_NAME}"
           fi
+
+          echo "TAG=${TAG}" >> "$GITHUB_OUTPUT"
 
       - name: Build Only.
         uses: docker/build-push-action@v6
+        env:
+          CACHE_SCOPE: ${{ github.head_ref || github.ref_name }}-${{ matrix.build_type }}
         with:
           context: .
           file: ./src/flavor/Dockerfile.apache
@@ -102,9 +104,9 @@ jobs:
             BUILD_TYPE=${{ matrix.build_type }}
             PHP_VERSION=${{ steps.tags.outputs.PHP_VERSION }}
           cache-from: >-
-            type=gha,scope=${{ github.head_ref || github.ref_name }}-${{ matrix.build_type }}
+            type=gha,scope=${{ env.CACHE_SCOPE }}
           cache-to: >-
-            type=gha,mode=max,scope=${{ github.head_ref || github.ref_name }}-${{ matrix.build_type }}
+            type=gha,mode=max,scope=${{ env.CACHE_SCOPE }}
           provenance: false
           sbom: false
 
