fix(workflows): Standardize quotes in YAML files for consistency and readability.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,21 +2,21 @@
 on:
   pull_request:
     paths-ignore:
-      - 'docs/**'
-      - 'README.md'
-      - 'CHANGELOG.md'
-      - '.gitignore'
-      - '.gitattributes'
+      - "docs/**"
+      - "README.md"
+      - "CHANGELOG.md"
+      - ".gitignore"
+      - ".gitattributes"
 
   push:
     branches:
       - main
     paths-ignore:
-      - 'docs/**'
-      - 'README.md'
-      - 'CHANGELOG.md'
-      - '.gitignore'
-      - '.gitattributes'
+      - "docs/**"
+      - "README.md"
+      - "CHANGELOG.md"
+      - ".gitignore"
+      - ".gitattributes"
 
 concurrency:
   group: build-${{ github.workflow }}-${{ github.ref }}
