--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,19 +2,19 @@
 on:
   push:
     tags:
-      - 'v*.*.*'
+      - "v*.*.*"
   workflow_dispatch:
     inputs:
       cleanup_after:
-        description: 'Run cleanup after build'
+        description: "Run cleanup after build"
         required: false
-        default: 'true'
+        default: "true"
         type: choice
         options:
-          - 'true'
-          - 'false'
+          - "true"
+          - "false"
       version:
-        description: 'Version to build (for example, 1.0.0)'
+        description: "Version to build (for example, 1.0.0)"
         required: true
         type: string
 
@@ -27,7 +27,7 @@ concurrency:
 name: release
 
 env:
-  PHP_VERSION: '8.4'
+  PHP_VERSION: "8.4"
   REGISTRY: ghcr.io
 
 jobs:
@@ -109,25 +109,30 @@ jobs:
           PHP_VERSION="${{ env.PHP_VERSION }}"
 
           # Main tags with version
-          TAGS="${BASE_NAME}:${VERSION}-${BUILD_TYPE}"
-          TAGS="${TAGS},${BASE_NAME}:${PHP_VERSION}-${VERSION}-${BUILD_TYPE}"
+          TAGS=(
+            "${BASE_NAME}:${VERSION}-${BUILD_TYPE}"
+            "${BASE_NAME}:${PHP_VERSION}-${VERSION}-${BUILD_TYPE}"
+          )
 
           # Latest tag for prod on version tags or validated manual releases
           if [[ "$BUILD_TYPE" == "prod" && \
-                ( "${{ github.ref }}" =~ ^refs/tags/v || \
-                  "${{ github.event_name }}" == "workflow_dispatch" ) ]]; then
-            TAGS="${TAGS},${BASE_NAME}:latest"
-            TAGS="${TAGS},${BASE_NAME}:${PHP_VERSION}-latest"
+              ( "${{ github.ref }}" =~ ^refs/tags/v || \
+                "${{ github.event_name }}" == "workflow_dispatch" ) ]]; then
+            TAGS+=("${BASE_NAME}:latest" "${BASE_NAME}:${PHP_VERSION}-latest")
           fi
 
           # Build type latest
           if [[ "${{ github.ref }}" =~ ^refs/tags/v || \
-                "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-            TAGS="${TAGS},${BASE_NAME}:${BUILD_TYPE}-latest"
+              "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            TAGS+=("${BASE_NAME}:${BUILD_TYPE}-latest")
           fi
 
-          printf 'tags=%s\n' "$TAGS" >> "$GITHUB_OUTPUT"
-          echo "📦 Tags: $TAGS"
+          {
+            echo 'tags<<EOF'
+            printf "%s\n" "${TAGS[@]}"
+            echo 'EOF'
+          } >> "$GITHUB_OUTPUT"
+          printf "📦 Tags:\n%s\n" "${TAGS[*]}"
 
       - name: Build and Push.
         uses: docker/build-push-action@v6
@@ -185,7 +190,7 @@ jobs:
           owner: ${{ github.repository_owner }}
           repository: ${{ github.repository }}
           package: apache
-          delete-tags: '*-${{ matrix.build_type }}'
+          delete-tags: "*-${{ matrix.build_type }}"
           exclude-tags: |
             latest
             ${{ matrix.build_type }}-latest
