--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,12 @@ env:
 jobs:
   lint:
     runs-on: ubuntu-latest
+
+    permissions:
+      checks: write
+      contents: read
+      statuses: write
+
     steps:
       - uses: actions/checkout@v5
         with:
@@ -48,10 +54,10 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+
     permissions:
       actions: write
       contents: read
-      packages: write
 
     strategy:
       fail-fast: false
