--- a/.github/linters/.hadolint.yaml
+++ b/.github/linters/.hadolint.yaml
@@ -1,3 +1,5 @@
 ---
 ignored:
+    - DL3006 # Always tag the version of an image explicitly.
     - DL3008 # Pin versions in apk add.
+    - DL3059 # Multiple consecutive `RUN` instructions.
