fix(linter): Add permissions section to `linter.yml` for enhanced job access control.

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -5,6 +5,11 @@ on:
 
 name: linter
 
+permissions:
+  checks: write
+  contents: read
+  statuses: write
+
 jobs:
   linter:
     uses: php-forge/actions/.github/workflows/super-linter.yml@main
