fix(build): Remove unnecessary permissions section from `build.yml`.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,12 +27,9 @@ name: build
 env:
   REGISTRY: ghcr.io
 
+jobs:
   build:
     runs-on: ubuntu-latest
-
-    permissions:
-      actions: write
-      contents: read
 
     strategy:
       fail-fast: false
