--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,34 +43,14 @@ jobs:
       - name: Setup Docker Buildx.
         uses: docker/setup-buildx-action@v3
 
-      - name: Prepare tags.
+      - name: Prepare Tags.
         id: tags
-        env:
-          BUILD_TYPE: ${{ matrix.build_type }}
-          PHP_VERSION: "8.4"
-        run: |
-          BASE_NAME="${REGISTRY}/${{ github.repository_owner }}/apache"
-          FLAVOR="debian-${BUILD_TYPE}"
-
-          echo "BASE_NAME=${BASE_NAME}" >> "$GITHUB_OUTPUT"
-          echo "PHP_VERSION=${PHP_VERSION}" >> "$GITHUB_OUTPUT"
-
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            # For PRs: use PR number
-            PR_NUMBER=${{ github.event.number }}
-            TAG="${BASE_NAME}:${PHP_VERSION}-${FLAVOR}-pr-${PR_NUMBER}"
-          elif [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
-            # For main: stable tags + short SHA
-            SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
-            TAG="${BASE_NAME}:${PHP_VERSION}-${FLAVOR}"
-            TAG="${TAG},${BASE_NAME}:${PHP_VERSION}-${FLAVOR}-sha-${SHORT_SHA}"
-          else
-            # Other branches: use branch name
-            BRANCH_NAME="${GITHUB_REF#refs/heads/}"
-            TAG="${BASE_NAME}:${PHP_VERSION}-${FLAVOR}-${BRANCH_NAME}"
-          fi
-
-          echo "TAG=${TAG}" >> "$GITHUB_OUTPUT"
+        uses: ./.github/actions/prepare-docker-tags
+        with:
+          base-name: >-
+            ${{ inputs.registry }}/${{ inputs.repository-owner }}/${{ inputs.tag-prefix }}
+          build-type: ${{ matrix.build_type }}
+          php-version: ${{ inputs.php-version }}
 
       - name: Build Only.
         uses: docker/build-push-action@v6
