fix(build): Add `prepare-docker-tags` action for dynamic Docker tag generation in build workflow.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Prepare Tags.
         id: tags
-        uses: ./.github/actions/prepare-docker-tags
+        uses: ./.github/actions/prepare-docker-tags@main
         with:
           base-name: >-
             ${{ inputs.registry }}/${{ inputs.repository-owner }}/${{ inputs.tag-prefix }}
