fix(build): Optimize tag generation syntax for clarity in Docker tag preparation.

--- a/.github/actions/prepare-docker-tags/action.yml
+++ b/.github/actions/prepare-docker-tags/action.yml
@@ -62,7 +62,7 @@ runs:
           # For main: stable tags + short SHA
           SHORT_SHA=$(echo "${SHA}" | cut -c1-7)
           TAG="${BASE_NAME}:${PHP_VERSION}-${FLAVOR}"
-          TAG="${TAG},${BASE_NAME}:${PHP_VERSION}-${FLAVOR}-sha-${SHORT_SHA}"
+          TAG+=",${BASE_NAME}:${PHP_VERSION}-${FLAVOR}-sha-${SHORT_SHA}"
         else
           # Other branches: use branch name
           BRANCH_NAME="${REF#refs/heads/}"
