fix(build): Enhance Docker tag preparation and add version validation action.

--- a/.github/actions/prepare-docker-tags/action.yml
+++ b/.github/actions/prepare-docker-tags/action.yml
@@ -2,7 +2,7 @@ name: Prepare Docker Tags
 
 description: >-
   Prepares Docker image tags based on context
-  (PR, main branch, or feature branch)
+  (PR, main branch, feature branch, or release)
 
 inputs:
   base-name:
@@ -18,6 +18,13 @@ inputs:
   flavor-prefix:
     description: Flavor prefix.
     default: debian
+    required: false
+  is-release:
+    description: Whether this is a release build.
+    default: "false"
+    required: false
+  version:
+    description: Release version (for releases only).
     required: false
 
 outputs:
@@ -40,12 +47,14 @@ runs:
       env:
         BASE_NAME: ${{ inputs.base-name }}
         BUILD_TYPE: ${{ inputs.build-type }}
-        PHP_VERSION: ${{ inputs.php-version }}
-        FLAVOR_PREFIX: ${{ inputs.flavor-prefix }}
         EVENT_NAME: ${{ github.event_name }}
+        FLAVOR_PREFIX: ${{ inputs.flavor-prefix }}
+        IS_RELEASE: ${{ inputs.is-release }}
+        PHP_VERSION: ${{ inputs.php-version }}
         PR_NUMBER: ${{ github.event.number }}
         REF: ${{ github.ref }}
         SHA: ${{ github.sha }}
+        VERSION: ${{ inputs.version }}
       run: |
         # Prepare flavor
         FLAVOR="${FLAVOR_PREFIX}-${BUILD_TYPE}"
@@ -55,7 +64,18 @@ runs:
         echo "flavor=${FLAVOR}" >> "$GITHUB_OUTPUT"
 
         # Generate tags based on context
-        if [[ "${EVENT_NAME}" == "pull_request" ]]; then
+        if [[ "${IS_RELEASE}" == "true" && -n "${VERSION}" ]]; then
+          # Release context: similar to regular builds but with SHA
+          SHORT_SHA=$(echo "${SHA}" | cut -c1-7)
+          TAG="${BASE_NAME}:${PHP_VERSION}-${FLAVOR}-v${VERSION}"
+          TAG+=",${BASE_NAME}:${PHP_VERSION}-${FLAVOR}-sha-${SHORT_SHA}"
+
+          # Latest tag only for prod builds
+          if [[ "$BUILD_TYPE" == "prod" ]]; then
+            TAG+=",${BASE_NAME}:latest"
+          fi
+
+        elif [[ "${EVENT_NAME}" == "pull_request" ]]; then
           # For PRs: use PR number
           TAG="${BASE_NAME}:${PHP_VERSION}-${FLAVOR}-pr-${PR_NUMBER}"
         elif [[ "${REF}" == "refs/heads/main" ]]; then
