--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,11 +50,12 @@ jobs:
 
       - name: Prepare Tags.
         id: tags
-        uses: ./.github/actions/prepare-docker-tags
+        uses: ./.github/actions/prepare-docker-tags@main
         with:
           base-name: "${{ env.REGISTRY }}/${{ github.repository_owner }}/apache"
           build-type: ${{ matrix.build_type }}
           flavor-prefix: "debian"
+          is-release: "false"
           php-version: "${{ env.PHP_VERSION }}"
 
       - name: Build Only.
