--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,14 +5,6 @@ on:
       - "v*.*.*"
   workflow_dispatch:
     inputs:
-      cleanup_after:
-        description: "Run cleanup after build"
-        required: false
-        default: "true"
-        type: choice
-        options:
-          - "true"
-          - "false"
       version:
         description: "Version to build (for example, 1.0.0)"
         required: true
@@ -35,38 +27,21 @@ jobs:
     runs-on: ubuntu-latest
 
     outputs:
-      version: ${{ steps.version.outputs.version }}
-      should_build: ${{ steps.version.outputs.should_build }}
+      version: ${{ steps.validate.outputs.version }}
+      should_build: ${{ steps.validate.outputs.should_build }}
+      is_prerelease: ${{ steps.validate.outputs.is_prerelease }}
+      source: ${{ steps.validate.outputs.source }}
 
     steps:
-      - name: Extract version.
-        id: version
-        env:
-          INPUT_VERSION: ${{ github.event.inputs.version }}
-        run: |
-          set -Eeuo pipefail
-          VERSION=""
-          SHOULD_BUILD="false"
+      - name: Checkout
+        uses: actions/checkout@v5
 
-          # From tag
-          if [[ "${GITHUB_REF_NAME:-}" == v* ]]; then
-            VERSION="${GITHUB_REF_NAME#v}"
-            SHOULD_BUILD="true"
-          # From workflow dispatch
-          elif [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-            VERSION="$INPUT_VERSION"
-            SHOULD_BUILD="true"
-          fi
-
-          # Validate semantic version
-          if [[ "$VERSION" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-            printf 'version=%s\n' "$VERSION" >> "$GITHUB_OUTPUT"
-            printf 'should_build=%s\n' "$SHOULD_BUILD" >> "$GITHUB_OUTPUT"
-            echo "✅ Valid version: $VERSION"
-          else
-            echo "should_build=false" >> "$GITHUB_OUTPUT"
-            echo "⚠️ No valid version found"
-          fi
+      - name: Validate Version
+        id: validate
+        uses: ./.github/actions/validate-version
+        with:
+          input-version: ${{ github.event.inputs.version }}
+          allow-prerelease: "false"
 
   build:
     needs: validate-version
@@ -85,60 +60,36 @@ jobs:
         build_type: [dev, full, prod]
 
     steps:
-      - name: Checkout.
+      - name: Checkout
         uses: actions/checkout@v5
 
-      - name: Setup Docker Buildx.
+      - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to GitHub Container Registry.
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Compute build metadata.
+      - name: Compute build metadata
         id: meta
         run: |
           echo "created=$(date -u +%Y-%m-%dT%H:%M:%SZ)" >> "$GITHUB_OUTPUT"
 
-      - name: Prepare tags.
+      - name: Prepare Tags
         id: tags
-        run: |
-          set -Eeuo pipefail
-          BASE_NAME="${{ env.REGISTRY }}/${{ github.repository_owner }}/apache"
-          VERSION="${{ needs.validate-version.outputs.version }}"
-          BUILD_TYPE="${{ matrix.build_type }}"
-          PHP_VERSION="${{ env.PHP_VERSION }}"
+        uses: ./.github/actions/prepare-docker-tags
+        with:
+          base-name: "${{ env.REGISTRY }}/${{ github.repository_owner }}/apache"
+          build-type: ${{ matrix.build_type }}
+          flavor-prefix: "debian"
+          php-version: "${{ env.PHP_VERSION }}"
+          version: ${{ needs.validate-version.outputs.version }}
+          is-release: "true"
 
-          # Main tags with version
-          TAGS=(
-            "${BASE_NAME}:${VERSION}-${BUILD_TYPE}"
-            "${BASE_NAME}:${PHP_VERSION}-${VERSION}-${BUILD_TYPE}"
-          )
-
-          # Latest tag for prod on version tags or validated manual releases
-          if [[ "$BUILD_TYPE" == "prod" && \
-              ( "${{ github.ref }}" =~ ^refs/tags/v || \
-                "${{ github.event_name }}" == "workflow_dispatch" ) ]]; then
-            TAGS+=("${BASE_NAME}:latest" "${BASE_NAME}:${PHP_VERSION}-latest")
-          fi
-
-          # Build type latest
-          if [[ "${{ github.ref }}" =~ ^refs/tags/v || \
-              "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-            TAGS+=("${BASE_NAME}:${BUILD_TYPE}-latest")
-          fi
-
-          {
-            echo 'tags<<EOF'
-            printf "%s\n" "${TAGS[@]}"
-            echo 'EOF'
-          } >> "$GITHUB_OUTPUT"
-          printf "📦 Tags:\n%s\n" "${TAGS[*]}"
-
-      - name: Build and Push.
+      - name: Build and Push
         uses: docker/build-push-action@v6
         env:
           BUILD_VERSION: ${{ needs.validate-version.outputs.version }}
@@ -160,73 +111,17 @@ jobs:
           sbom: true
           tags: ${{ steps.tags.outputs.tags }}
 
-  cleanup-old-versions:
-    name: Cleanup old versions
-    needs: [validate-version, build]
-    if: |
-      always() &&
-      needs.build.result == 'success' &&
-      (
-        github.event.inputs.cleanup_after == 'true' ||
-        github.event_name == 'push'
-      )
-
-    runs-on: ubuntu-latest
-
-    permissions:
-      packages: write
-      contents: read
-
-    strategy:
-      matrix:
-        build_type: [dev, full, prod]
-
-    steps:
-      - name: Wait for images to be available
-        run: sleep 30
-
-      - name: >-
-          Cleanup ${{ matrix.build_type }} versions
-        uses: dataaxiom/ghcr-cleanup-action@v1
+      - name: Show build result
         env:
-          BUILD_VERSION: ${{ needs.validate-version.outputs.version }}
           BUILD_TYPE: ${{ matrix.build_type }}
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          owner: ${{ github.repository_owner }}
-          repository: ${{ github.repository }}
-          package: apache
-          delete-tags: "*-${{ matrix.build_type }}"
-          exclude-tags: |
-            latest
-            ${{ matrix.build_type }}-latest
-            8.4-latest
-            ${{ env.BUILD_VERSION }}-${{ env.BUILD_TYPE }}
-            8.4-${{ env.BUILD_VERSION }}-${{ env.BUILD_TYPE }}
-          keep-n-tagged: 2
-          delete-untagged: true
-          keep-n-untagged: 0
-          older-than: 1 hour
-          validate: true
-          dry-run: false
-
-      - name: Report cleanup
-        if: always()
-        env:
-          BUILD_VERSION: ${{ needs.validate-version.outputs.version }}
-          BUILD_TYPE: ${{ matrix.build_type }}
+          VERSION: ${{ needs.validate-version.outputs.version }}
         run: |
-          {
-            echo "### 🧹 Cleanup post-release"
-            echo "**Build type:** ${{ env.BUILD_TYPE }}"
-            echo "**Version nueva:** ${{ env.BUILD_VERSION }}"
-            echo "**Versiones mantenidas:** 2"
-            echo "**Estado:** ${{ job.status }}"
-          } >> "$GITHUB_STEP_SUMMARY"
+          echo "🎉 Build completed for ${BUILD_TYPE} v${VERSION}!"
+          echo "Tags: ${{ steps.tags.outputs.tags }}"
 
   summary:
     name: Release Summary
-    needs: [validate-version, build, cleanup-old-versions]
+    needs: [validate-version, build]
     if: always()
 
     runs-on: ubuntu-latest
@@ -234,34 +129,48 @@ jobs:
     steps:
       - name: Generate summary
         env:
-          BUILD_VERSION: ${{ needs.validate-version.outputs.version }}
+          VERSION: ${{ needs.validate-version.outputs.version }}
+          SOURCE: ${{ needs.validate-version.outputs.source }}
+          IS_PRERELEASE: ${{ needs.validate-version.outputs.is_prerelease }}
           BUILD_RESULT: ${{ needs.build.result }}
-          CLEANUP_RESULT: ${{ needs.cleanup-old-versions.result }}
+          SHOULD_BUILD: ${{ needs.validate-version.outputs.should_build }}
         run: |
           {
             echo "# 📦 Release Summary"
             echo ""
-            echo "**Version:** ${{ env.BUILD_VERSION }}"
+            echo "**Version:** \`${{ env.VERSION }}\`"
+            echo "**Source:** ${{ env.SOURCE }}"
+            echo "**Type:** ${{ env.IS_PRERELEASE == 'true' && 'Pre-release' || 'Stable' }}"
             echo "**PHP Version:** ${{ env.PHP_VERSION }}"
             echo "**Registry:** ${{ env.REGISTRY }}"
             echo ""
-            echo "## 🗂️ Build Status"
-            echo "| Build Type | Status |"
-            echo "|------------|--------|"
-            echo "| dev | ${{ env.BUILD_RESULT }} |"
-            echo "| full | ${{ env.BUILD_RESULT }} |"
-            echo "| prod | ${{ env.BUILD_RESULT }} |"
-            echo ""
-          } >> "$GITHUB_STEP_SUMMARY"
 
-          if [[ "${{ env.CLEANUP_RESULT }}" != "skipped" ]]; then
-            {
-              echo "## 🧹 Cleanup"
-              echo "Status: ${{ env.CLEANUP_RESULT }}"
-            } >> "$GITHUB_STEP_SUMMARY"
-          fi
+            if [[ "${{ env.SHOULD_BUILD }}" == "true" ]]; then
+              echo "## 🗂️ Build Status"
+              echo "| Build Type | Status |"
+              echo "|------------|--------|"
+              echo "| dev | ${{ env.BUILD_RESULT }} |"
+              echo "| full | ${{ env.BUILD_RESULT }} |"
+              echo "| prod | ${{ env.BUILD_RESULT }} |"
+              echo ""
 
-          {
+              if [[ "${{ env.BUILD_RESULT }}" == "success" ]]; then
+                echo "## 📋 Generated Tags"
+                echo "- \`8.4-debian-{build_type}-v${{ env.VERSION }}\`"
+                echo "- \`8.4-debian-{build_type}-sha-{commit}\`"
+                if [[ "${{ env.IS_PRERELEASE }}" == "false" ]]; then
+                  echo "- \`latest\` (prod only)"
+                fi
+                echo ""
+              fi
+
+              echo "## 🧹 Next Steps"
+              echo "Cleanup can be triggered manually via the \`cleanup-versions\` workflow"
+            else
+              echo "## ⚠️ Build Skipped"
+              echo "Version validation failed - no images were built."
+            fi
+
             echo ""
             echo "---"
             echo "*Released at $(date -u +%Y-%m-%dT%H:%M:%SZ)*"
