--- a/.github/actions/prepare-docker-tags/action.yml
+++ b/.github/actions/prepare-docker-tags/action.yml
@@ -65,10 +65,8 @@ runs:
 
         # Generate tags based on context
         if [[ "${IS_RELEASE}" == "true" && -n "${VERSION}" ]]; then
-          # Release context: similar to regular builds but with SHA
-          SHORT_SHA=$(echo "${SHA}" | cut -c1-7)
+          # Release context: clean version tag only
           TAG="${BASE_NAME}:${PHP_VERSION}-${FLAVOR}-v${VERSION}"
-          TAG+=",${BASE_NAME}:${PHP_VERSION}-${FLAVOR}-sha-${SHORT_SHA}"
 
           # Latest tag only for prod builds
           if [[ "$BUILD_TYPE" == "prod" ]]; then
@@ -79,10 +77,8 @@ runs:
           # For PRs: use PR number
           TAG="${BASE_NAME}:${PHP_VERSION}-${FLAVOR}-pr-${PR_NUMBER}"
         elif [[ "${REF}" == "refs/heads/main" ]]; then
-          # For main: stable tags + short SHA
-          SHORT_SHA=$(echo "${SHA}" | cut -c1-7)
+          # For main: stable tags only
           TAG="${BASE_NAME}:${PHP_VERSION}-${FLAVOR}"
-          TAG+=",${BASE_NAME}:${PHP_VERSION}-${FLAVOR}-sha-${SHORT_SHA}"
         else
           # Other branches: use branch name
           BRANCH_NAME="${REF#refs/heads/}"
