--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -106,6 +106,8 @@ jobs:
           file: ./src/flavor/apache/Dockerfile
           labels: |
             org.opencontainers.image.created=${{ env.IMAGE_CREATED }}
+            org.opencontainers.image.ref.name=${{ github.ref_name }}
+            org.opencontainers.image.revision=${{ github.sha }}
             org.opencontainers.image.version=${{ env.BUILD_VERSION }}
           provenance: true
           push: true
@@ -156,9 +158,8 @@ jobs:
               echo ""
 
               if [[ "${{ env.BUILD_RESULT }}" == "success" ]]; then
-                echo "## 📋 Generated Tags"
+                echo "## 🏷️ Generated Tags"
                 echo "- \`8.4-debian-{build_type}-v${{ env.VERSION }}\`"
-                echo "- \`8.4-debian-{build_type}-sha-{commit}\`"
                 if [[ "${{ env.IS_PRERELEASE }}" == "false" ]]; then
                   echo "- \`latest\` (prod only)"
                 fi
