--- a/src/flavor/apache/Dockerfile
+++ b/src/flavor/apache/Dockerfile
@@ -4,7 +4,7 @@
 #==============================================================================
 
 ARG BUILD_TYPE=dev
-ARG PHP_VERSION=8.5.2
+ARG PHP_VERSION=8.5
 
 #------------------------------------------------------------------------------
 # Base System
@@ -185,9 +185,26 @@ RUN /bin/bash -o pipefail -c "set -ex \
     && echo \"deb [arch=amd64,arm64 signed-by=/usr/share/keyrings/microsoft-prod.gpg] https://packages.microsoft.com/debian/12/prod bookworm main\" > /etc/apt/sources.list.d/mssql-release.list \
     && apt-get update \
     && ACCEPT_EULA=Y apt-get install -y --no-install-recommends msodbcsql18 \
-    && apt-get install -y --no-install-recommends unixodbc-dev \
-    && install-php-extensions sqlsrv pdo_sqlsrv \
-    && apt-get purge -y --auto-remove gnupg \
+    && apt-get install -y --no-install-recommends unixodbc unixodbc-dev $PHPIZE_DEPS \
+    && printf "\\n" | pecl install sqlsrv-5.12.0 \
+    && if [[ "$(php -r 'echo PHP_VERSION_ID;')" -ge 80500 ]]; then \
+        cd /tmp \
+        && pecl download pdo_sqlsrv-5.12.0 \
+        && tar -xf pdo_sqlsrv-5.12.0.tgz \
+        && rm -f pdo_sqlsrv-5.12.0.tgz \
+        && cd pdo_sqlsrv-5.12.0 \
+        && sed -i 's/= dbh->error_mode/= (enum pdo_error_mode) dbh->error_mode/' pdo_dbh.cpp \
+        && sed -i 's/zval_ptr_dtor( &dbh->query_stmt_zval );/OBJ_RELEASE(dbh->query_stmt_obj);dbh->query_stmt_obj=NULL;/' php_pdo_sqlsrv_int.h \
+        && phpize \
+        && ./configure --with-php-config="$(command -v php-config)" \
+        && make -j"$(nproc)" \
+        && make install \
+        && rm -rf /tmp/pdo_sqlsrv-5.12.0; \
+    else \
+        printf "\\n" | pecl install pdo_sqlsrv-5.12.0; \
+    fi \
+    && docker-php-ext-enable sqlsrv pdo_sqlsrv \
+    && apt-get purge -y --auto-remove gnupg unixodbc-dev $PHPIZE_DEPS \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*"
 
